--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,6 +13,7 @@
   max-height: 20vh;
   border-bottom: 1px solid #eaeaea;
   background-color:rgb(95, 160, 146);
+  padding: 1%;
 }
 .instructions {
   display: flex;
