--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,12 @@
   border-bottom: 1px solid #eaeaea;
   background-color:rgb(95, 160, 146);
   padding: 1%;
+  text-align: center;
+}
+.header h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .instructions {
   display: flex;
@@ -34,6 +40,7 @@
 .input {
   min-width: 25vw;
   min-height: 3vh;
+  text-align: center;
 }
 
 .form {
@@ -43,6 +50,7 @@
   justify-content: center;
   align-items: center;
   padding: 2%;
+  text-align: center;
 }
 
 .buttonspacing {
@@ -176,5 +184,17 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+
+  .header {
+    padding-left: 1%;
+  }
+  .header h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .main {
+    text-align: center;
   }
 }
