--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -55,13 +55,19 @@
 .buttonspacing {
   padding-top: 5%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
 }
 
 .formbutton {
   padding: 2.5%;
   background-color: #96bf48;
+  font-weight: bold;
+}
+.refreshformbutton {
+  padding: 2.5%;
+  background-color: gray;
   font-weight: bold;
 }
 
